fixes observer and handlers